--- a/WeatherWonder/Base.lproj/Main.storyboard
+++ b/WeatherWonder/Base.lproj/Main.storyboard
@@ -26,17 +26,23 @@
                                 <rect key="frame" x="0.0" y="64" width="375" height="603"/>
                                 <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                             </tableView>
+                            <activityIndicatorView hidden="YES" opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" hidesWhenStopped="YES" style="gray" translatesAutoresizingMaskIntoConstraints="NO" id="jDB-yP-Cf9">
+                                <rect key="frame" x="177" y="323" width="20" height="20"/>
+                            </activityIndicatorView>
                         </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
                             <constraint firstItem="za9-j4-Whs" firstAttribute="top" secondItem="y3c-jy-aDJ" secondAttribute="bottom" id="CTs-Ra-SU9"/>
                             <constraint firstItem="za9-j4-Whs" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="F5o-ar-gOj"/>
+                            <constraint firstItem="jDB-yP-Cf9" firstAttribute="centerY" secondItem="8bC-Xf-vdC" secondAttribute="centerY" id="exR-Pt-ruQ"/>
                             <constraint firstAttribute="trailing" secondItem="za9-j4-Whs" secondAttribute="trailing" id="oJM-56-eby"/>
+                            <constraint firstItem="jDB-yP-Cf9" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="vWd-of-1jD"/>
                             <constraint firstItem="wfy-db-euE" firstAttribute="top" secondItem="za9-j4-Whs" secondAttribute="bottom" id="yLC-XT-YKr"/>
                         </constraints>
                     </view>
                     <navigationItem key="navigationItem" title="Seven Day" id="n9I-7s-hgN"/>
                     <connections>
+                        <outlet property="activityIndicator" destination="jDB-yP-Cf9" id="RFJ-V2-gIz"/>
                         <outlet property="tableView" destination="za9-j4-Whs" id="qVo-sG-TXD"/>
                         <segue destination="FRT-Pm-atH" kind="show" identifier="SHOW_DETAIL" id="qSq-S4-LIL"/>
                     </connections>
